# lib/api-spec/openapi.yaml
@@ -110,6 +110,10 @@ components:
         purpose:
           type: string
           minLength: 3
+        logoDescription:
+          type: string
+        logoImageDataUrl:
+          type: string
         styles:
           type: array
           minItems: 1
